--- a/RABLib/Source/GenericTableView/cells/RabSingleCell.xib
+++ b/RABLib/Source/GenericTableView/cells/RabSingleCell.xib
@@ -1,28 +1,34 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="OpenSans-Regular.ttf">
+        <array key="OpenSans-Regular.ttf">
             <string>OpenSans</string>
-        </mutableArray>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SingleCell" customModule="RABLib" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RabSingleCell" customModule="RABLib" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="88"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Key" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5z-97-jTm">
-                    <rect key="frame" x="20" y="0.0" width="560" height="44"/>
+                    <rect key="frame" x="20" y="0.0" width="560" height="88"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="88" id="zbw-ra-7Au"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="18"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="i5z-97-jTm" secondAttribute="bottom" id="Ioj-zY-znM"/>
                 <constraint firstItem="i5z-97-jTm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="goz-VQ-cLG"/>
@@ -33,6 +39,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="titleLabel" destination="i5z-97-jTm" id="wDe-bE-J2a"/>
+                <outlet property="titleLabel_height" destination="zbw-ra-7Au" id="RBm-hP-Kse"/>
             </connections>
         </view>
     </objects>
