--- a/RABLib/Source/GenInputField.xib
+++ b/RABLib/Source/GenInputField.xib
@@ -72,6 +72,10 @@
                                                 <constraint firstAttribute="height" constant="20" id="MHy-ni-eg9"/>
                                                 <constraint firstAttribute="width" constant="20" id="Ocu-hB-9Dc"/>
                                             </constraints>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
                                             <connections>
                                                 <action selector="actionRightButton:" destination="-1" eventType="touchUpInside" id="KZr-7q-AhS"/>
                                             </connections>
